# imaginarium

./: .gitignore  Pipfile  README.md  manage.py  pyproject.toml
backend/backend/: settings.py
backend/manipulation/: apps.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: Appbar.js  Card.js
frontend/src/firebase/: db.js
frontend/src/pages/: Editor.js  Home.js
frontend/src/style/: Appbar.css  Card.css  Editor.css  Home.css
imaginarium/frontend/: package-lock.json  package.json
imaginarium/frontend/src/: App.css
imaginarium/frontend/src/components/: Card.js
imaginarium/frontend/src/pages/: Home.js
imaginarium/frontend/src/style/: Card.css  Home.css
imaginarium/frontend/templates/frontend/: index.html
imaginarium/imaginarium/: asgi.py  settings.py  urls.py  wsgi.py
src/imaginarium/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_imaginarium.py
