[tool.poetry]
name = "imaginarium"
version = "0.1.0"
description = "imaginarium - build pictures you imagine"
authors = ["Dastan Ozgeldi <ozgdastan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
djangorestframework = "^3.12.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.10b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
